--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-CLOUD_NAME=dz8o73qdo
-CLOUD_API_KEY=189894217651895
-CLOUD_API_SECRET=PbhJTtLvwBtkej86kOCV37xnTkE
+CLOUD_NAME=''
+CLOUD_API_KEY=''
+CLOUD_API_SECRET=''
